# SimpleBLE

.github/workflows/: ci_build.yml
examples/scan/: CMakeLists.txt  Info.plist.in
